fixed spacing

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -20,12 +20,12 @@
 }
 
 .experience-details-left .experience-details-content {
-  margin-top: 10rem;
+  margin-top: 16rem;
   text-align: right;
 }
 
 .experience-details-right .experience-details-content {
-  margin-bottom: 10rem;
+  margin-bottom: 16rem;
   text-align: left;
 }
 
@@ -59,7 +59,6 @@
 
 .vertical-rule {
   background: var(--color-skill);
-  /* height: 2px; */
   width: 2px;
   border: none;
 }
