--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -21,4 +21,9 @@
 .see-more {
   color: var(--color-text);
   opacity: 0.5;
+  margin-right: 5px;
+}
+
+.see-more-icon {
+  margin-left: 5px;
 }
